# redes_grafo

./: README.md  build_graph.py  convert_pdfs_to_markdown.py  extract_knowledge_triples.py  get_files_pdfs.py  normalize_graph.py  pyproject.toml
grafo_output/: grafo_triplas.graphml  grafo_triplas.html  grafo_triplas.json  grafo_triplas_normalizado.graphml  grafo_triplas_normalizado.html  grafo_triplas_normalizado.json
grafo_output_pessoas/: grafo_triplas.graphml  grafo_triplas.html  grafo_triplas.json
mineru_output/EFTA01262782/auto/: EFTA01262782.md  EFTA01262782_content_list.json  EFTA01262782_content_list_v2.json  EFTA01262782_middle.json  EFTA01262782_model.json
mineru_output/EFTA01262784/auto/: EFTA01262784.md  EFTA01262784_content_list.json  EFTA01262784_content_list_v2.json  EFTA01262784_middle.json  EFTA01262784_model.json
mineru_output/EFTA01262791/auto/: EFTA01262791.md  EFTA01262791_content_list.json  EFTA01262791_content_list_v2.json  EFTA01262791_middle.json  EFTA01262791_model.json
mineru_output/EFTA01262798/auto/: EFTA01262798.md  EFTA01262798_content_list.json  EFTA01262798_content_list_v2.json  EFTA01262798_middle.json  EFTA01262798_model.json
mineru_output/EFTA01262805/auto/: EFTA01262805.md  EFTA01262805_content_list.json  (+3 more)
triplas_json/: conexoes_pessoas.json  resumo.json  todas_triplas.json
triplas_json/documentos/: EFTA01262782.json  EFTA01262784.json  EFTA01262791.json  EFTA01262798.json  EFTA01262805.json  EFTA01262829.json  EFTA01262863.json  EFTA01262891.json  EFTA01262895.json  EFTA01262900.json  EFTA01262956.json
(+30 files in other folders)
